# Kataglyphis-DocumANTation

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Dockerfile  Makefile  README.md  SECURITY.md  build.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-documents.yml  ci.yml  docs-pages.yml  publish-image.yml
data/book/chapters/: 01-introduction.md  02-graphics-pipeline.md  02-python-intro.md  03-transformations.md  04-rasterization.md  05-lighting.md  06-texturing.md  07-ray-tracing.md  08-shaders.md  09-vulkan.md  10-advanced-rendering.md  11-template-demo.md  12-primitives-showcase.md  15-sets.md  18-function.md  23-about-me.md  24-template-demo.md
data/book/latex/: graphics_literature.bib  main.tex
data/cv/: README.md  cv.aux  cv.tex  myCV_METADATA.cls  section_headline.tex  section_private.tex  section_projects.tex  section_skills.tex
data/example/chapters/: 01-introduction.md  02-getting-started.md
data/presentation/: 01-motivation.md  02-technical-details.md  03-references.md  99-examples.md
data/presentation/demo/: 10-primitives-demo.md  99-examples.md
data/presentation/latex/: main.tex  refs.bib
docs/: Makefile  architecture.rst  build-pipeline.md  build_pipeline.rst  conf.py  gallery.md  getting-started.md  index.rst  make.bat  overview.md  project-info.md  usage.rst
docs-tooling/: README.md
docs-tooling/scripts/: generate-website-licenses.py  sync_versions.py
docs-tooling/source_templates/sphinx-book/: README.md  conf_base.py  custom.css  index_template.rst
docs-tooling/source_templates/sphinx-python/: conf_base.py
md2pdfLib/: build.py  check_build_log.py  pandoc_builder.py  presets.py  pygments-print.theme
md2pdfLib/book/pandoc/: metadata.yml
md2pdfLib/book/scripts/: md2pdf.py
md2pdfLib/book/template/latex/: bookclass.cls  c_code_style.tex  glossary_entries.tex  hyperref_setup.tex  nomenclature.tex  titlepage.tex
md2pdfLib/common/filters/: brand-divs.lua
md2pdfLib/common/latex/: brand-admonitions.tex  brand-code-block.tex  brand-code-inner.tex  brand-cv.tex
md2pdfLib/cv/template/latex/: myCV_METADATA.cls
md2pdfLib/pandoc/: base.yml
md2pdfLib/presentation/pandoc/: awesome-beamer-template.tex  metadata.yml
md2pdfLib/presentation/pptx/: finalize_deck.py  fit_titles.py  make_reference.py  number-titles.lua  pptx_common.py  style_code.py  verify_brand.py
md2pdfLib/presentation/scripts/: update_own_sty.sh
md2pdfLib/scripts/: compile_with_glossaries.sh
md2pdfLib/style/: brand-colors.tex  brand-fonts.tex
md2pdfLib/themes/: pygments-print.theme  pygments.theme
scripts/: build_book_with_glossaries_in_container.sh  build_in_container.sh
sphinx-kataglyphis-theme/: pyproject.toml  setup.py
sphinx-kataglyphis-theme/sphinx_kataglyphis/: __init__.py  __main__.py  brand.tokens.json  highlight.py
sphinx-kataglyphis-theme/sphinx_kataglyphis/_static/css/: custom.css
style/: README.md  brand.css  brand.json  brand.tokens.json  generate_style.py
tests/: test_check_build_log.py  test_generate_style.py  test_pandoc_builder.py  test_pptx_code_blocks.py  test_pptx_reference.py  test_pptx_titles.py  test_presets.py  test_theme.py
