[project]
name = "sphinx-kataglyphis-theme"
version = "0.1.0"
description = "Reusable Sphinx theme config + CSS for Kataglyphis documentation sites"
requires-python = ">=3.10"
dependencies = [
    "sphinx>=7",
    "sphinx-book-theme>=1",
    "myst-parser>=3",
    "sphinx-design>=0.6",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
